Added Role Added and Removed Events
## What's new:
- UserRoleAddedEvent
- UserRoleRemovedEvent

Bug Fixes:
- Color not auto resetting after log line